testsuite/escript/classes/fail-self-base-inheritance.err
fail-self-base-inheritance.src:10:1: error: Class 'Animal' references itself as a base class through inheritance.